<resources>
    <string name="app_name">HostelManagementSystem</string>
    <string name="already_a_user">ALREADY A USER?</string>
    <string name="welcome_to_hms">HOSTEL MANAGEMENT SYSTEM</string>
    <string name="create_a_new_account">CREATE A NEW ACCOUNT?</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="create">CREATE</string>
    <string name="create_a_new_account1">CREATE A NEW ACCOUNT</string>
    <string name="title_activity_maps">Map</string>

    <string name="feedbacktype1">food</string>
    <string name="feedbacktype2">room</string>
    <string name="feedbacktype3">security</string>
    <string name="feedbacktype4">others</string>
    <string name="feedback">feedbacktypelist</string>
    <string name="title_activity_main">Hostel Management System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hostel Management System</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
